--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <!-- https://croquet.studio/sdk/docs/index.html -->
         <meta charset="utf-8">
-        <script src="https://croquet.io/sdk/croquet-latest.min.js"></script>
+        <script src="https://unpkg.com/@croquet/croquet@0.4.0"></script>
     </head>
 
     <style>
